# 42SH

./: configure.ac
src/: 42sh.c  Makefile.am
src/ast/: Makefile.am  ast.c  ast.h  ast_and_or.c  ast_and_or.h  ast_case.c  ast_case.h  ast_cmd.c  ast_cmd.h  ast_for.c  ast_for.h  ast_fundec.c  ast_fundec.h  ast_if.c  ast_if.h  ast_list.c  ast_list.h  ast_negation.c  ast_negation.h  ast_pipe.c  ast_pipe.h  ast_redir.c  ast_redir.h  ast_simple_cmd.c  ast_simple_cmd.h  ast_until.c  ast_until.h  ast_while.c  ast_while.h
src/environment/: Makefile.am  arguments.c  arguments.h  environment.c  environment.h  environment_func.c  environment_func.h  loops.c  loops.h  shell_instance.c  shell_instance.h  special_var.c  special_var.h  var.c  var.h
src/error_handler/: Makefile.am  error_handler.c  error_handler.h
src/execution/: Makefile.am  execution.c  execution.h  execution_and_or.c  execution_case.c  execution_cmd.c  execution_for.c  execution_fundec.c  execution_if.c  execution_list.c  execution_negation.c  execution_pipe.c  execution_simple_cmd.c  execution_until.c  execution_while.c
src/execution/builtin/: builtin.c  builtin.h  builtin_alias.c  builtin_break.c  builtin_cd.c  builtin_continue.c  builtin_dot.c  builtin_echo.c  builtin_exit.c  builtin_export.c  builtin_false.c  builtin_true.c  builtin_unalias.c  builtin_unset.c
src/expansion/: Makefile.am  command_substitution.c  command_substitution.h  expansion.c  expansion.h  word_expansion.c  word_expansion.h
src/io_backend/: Makefile.am  io.c  io.h
src/lexer/: Makefile.am  lexer.c  lexer.h  token.h  token_recognition.c  token_recognition.h
src/parser/: Makefile.am  parser.h  parser_and_or.c  parser_command.c  parser_compound_list.c  parser_element.c  parser_else_clause.c  parser_fundec.c  parser_input.c  parser_list.c  parser_pipeline.c  parser_prefix.c  parser_redirection.c  parser_rule_case.c  parser_rule_for.c  parser_rule_if.c  parser_rule_until.c  parser_rule_while.c  parser_shell_command.c  parser_simple_command.c  parser_utils.c
src/redirection/: Makefile.am  redir_run.c  redirection.c  redirection.h
src/utils/: Makefile.am  argv_utils.c  argv_utils.h  hash_map.c  hash_map.h  hash_map_func.c  hash_map_func.h  string_utils.c  string_utils.h
tests/: Makefile.am  testsuite.sh
tests/alias/: simple_alias  testsuite.sh
tests/and_or/: hell  hell_andor_sub  one_op  one_op1  one_op2  op_with_spaces  testsuite.sh  two_op  two_op1
tests/break_continue/: for_break  for_continue  mix  one_level_break  simple_break  simple_continue  testsuite.sh  two_levels_break  uncommon_break  uncommon_break1  uncommon_continue  uncommon_continue1  until_break  while_hell
tests/builtin/: testsuite.sh
tests/case/: bracket_case  error2_case  error3_case  error4_case  error_case  medium_case  multiple_arg_case  no_match_case  question_case  simple_case  star_case  testsuite.sh  triple_semi_case
tests/cd/: cd_cat_file  cd_dot_slash  cd_error  cd_error1  cd_error2  cd_error3  cd_error4  cd_error5  cd_hard1  cd_hard2  cd_hard3  cd_hard_echo  cd_slash  cd_subshell  cd_symlink  cd_unset1  cd_unset2  cd_unset3  cd_unset4  cd_unset5  complexe_cd  multiple_cd  simple_cd  simple_cd_var  simple_cd_var1  symlink_hell  testsuite.sh
tests/command_block/: cmd_block_subshell  cmd_block_subshell_error  error_cmd_block  simple_cmd_block1  simple_cmd_block2  simple_cmd_block3  simple_cmd_block4  testsuite.sh
tests/comments/: inline_comment  just_a_comment  not_first  quoted  shebang  space_comments  testsuite.sh
tests/dot/: schizo_1  schizo_2  schizo_3  script.sh  simple_dot  testsuite.sh
tests/double_quotes/: all_quotes  double_error1  double_error2  double_error3  hard  hard_tmp  hell  long_echo  mix_quotes  multiple_double  multiple_white_quotes  space_doubles  testsuite.sh  weird_doubles  whole_double
tests/exit/: empty_exit1  error_exit2  exit_127  middle_exit  middle_exit1  multiple_exit  testsuite.sh
tests/expansion/: double_variable  double_variable1  error2  error3  error4  error5  error6  error7  fake_nested_cmd  for_dollar_quotes  for_star_noquotes  for_star_quotes  multiple_vars  multiple_vars1  nested_backquotes_cmd  nested_dollar_cmd  no_var  no_var1  quote_var_1  quote_var_2  simple_for_substitution  simple_variable  simple_variable1  simple_variable_brackets  testsuite.sh  var_134  var_3  var_3_1  var_3_2  var_sharp  var_sharp_empty  var_sharp_many  weird_export  weird_var  weird_var1  weird_var2  weird_var_echo
tests/for/: complexe_for  for_error1  for_error2  for_error3  for_error4  for_error5  for_noe_stdin  normal_for  simple_for1  simple_for2  simple_for_var  testsuite.sh  weird_for
tests/function/: args_restore_func  break_func1  break_func2  dollar_args_func  fail1_func  fail2_func  fail3_func  hard1_func  hard2_func  hard3_func  hard_arg_func  leak_func  normal1_func  normal2_func  normal3_func  normal4_func  redir1_func  redir2_func  simple_args_func  star_args_func  testsuite.sh  unset_func
tests/if_commands/: bad_if1  bad_if2  bad_if3  bad_if4  bad_separators1  bad_separators2  colliding_keywords  embedded_ifs1  embedded_ifs2  if_and_commands  if_big_bodies  if_false  if_false_else  if_many_conds  if_mix_separators  if_multiline  if_true  if_true_else  testsuite.sh  two_ifs
tests/io_backend/: testsuite.sh
(+171 files in other folders)
