AC_INIT([42sh], [1.0], [gustave.herve@epita.fr])

AM_INIT_AUTOMAKE([subdir-objects] [foreign])

AM_PROG_AR

AM_SILENT_RULES([yes])

AC_PROG_RANLIB

AC_PROG_CC

AC_CONFIG_FILES([
                    Makefile
                    src/Makefile
                    src/ast/Makefile
                    src/execution/Makefile
                    src/expansion/Makefile
                    src/io_backend/Makefile
                    src/lexer/Makefile
                    src/parser/Makefile
                    src/utils/Makefile
                    src/redirection/Makefile
                    src/error_handler/Makefile
                    src/environment/Makefile
                    tests/Makefile
                    ])

AC_OUTPUT
